# whisper_ggml_plus

./: CHANGELOG.md  FIX_LARGE_V3_TURBO_SEGMENTATION.md  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: release.yml
.sisyphus/drafts/: ios-metal-shader-fix.md
.sisyphus/plans/: large-v3-turbo-fix.md
android/src/whisper/: CMakeLists.txt  main.cpp
android/src/whisper/whisper.cpp/: whisper.cpp
example/ios/Runner.xcodeproj/: project.pbxproj
ios/: whisper_ggml_plus.podspec
ios/Classes/: whisper_flutter_plus.cpp
ios/Classes/whisper/: whisper.cpp
lib/src/: whisper.dart  whisper_audio_convert.dart  whisper_controller.dart
macos/: whisper_ggml_plus.podspec
macos/Classes/: whisper_ggml.cpp
macos/Classes/whisper/: whisper.cpp
